[package]
name = "fclc"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
console = "0.15.8"
crossbeam = { version = "0.8.4", features = ["crossbeam-channel"] }
glob = "0.3.1"
hashbrown = "0.14.3"
indicatif = "0.17.8"
once_cell = "1.19.0"
phf = "0.11.2"
rayon = "1.10.0"
regex = "1.10.4"
tabled = { version = "0.15.0", features = ["ansi"] }

[build-dependencies]
genco = "0.17.8"
phf_codegen = "0.11.2"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.12"
